--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ body {
 
 .top {
     height: 40vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(Back.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
+   
 }
 
 .budget {
